--- a/src/components/Pages/about.scss
+++ b/src/components/Pages/about.scss
@@ -97,6 +97,12 @@
     width: 20px;
 }
 
+.mobileContainerAbt {
+    background: #ffffff;
+    position: fixed;
+    margin-top: -10px;
+  }
+
 @media (min-width: 501px) and (max-width: 620px){
     .aboutContainer {
         display: grid;
