--- a/src/components/Pages/_privatedining.scss
+++ b/src/components/Pages/_privatedining.scss
@@ -42,6 +42,7 @@
     margin: 4px 2px;
     cursor: pointer;
     grid-column-start: 5;
+    grid-row-start: 4;
     margin-top: 50px;
     width:17vw;
     height:60px;
