--- a/src/components/Pages/about.scss
+++ b/src/components/Pages/about.scss
@@ -24,14 +24,15 @@
 }
 
 .aboutImage1 {
-    height: 30vh;
+    margin-top: 23px;
+    height: 24vh;
     width: 30vw;
     grid-column-start: 3;
     grid-row-start: 3;
 }
 
 .aboutImage2 {
-    height: 30vh;
+    height: 24vh;
     width: 30vw;
     grid-row-start: 5;
     grid-column-start: 3;
@@ -44,6 +45,7 @@
     grid-row-start: 3;
     margin-left: -120px;
     margin-right: -80px;
+    margin-top: 25px;
     color: #edeec9;
     padding: 10px;
     font-size: 21px;
@@ -85,20 +87,19 @@
     margin-top: 20px;
 }
 
-.socialFooterAbt {
-    margin-top:10px;
+.socialFooter {
     text-align: center;
+    margin-top: 200px;
 }
 
 .socialAbt {
-    margin-right: 20px;
     font-size: 25px;
     color: #3b5998;
     width: 20px;
+    
 }
 
-.social2Abt {
-    margin-left: 20px;
+.socialAbt2 {
     font-size: 25px;
     color: #1da1f2;
     width: 20px;
@@ -107,7 +108,8 @@
 .mobileContainerAbt {
     background: #ffffff;
     position: fixed;
-    margin-top: -10px;
+    margin-top: 10px;
+    width: 100vw;
   }
 
 @media (min-width: 501px) and (max-width: 620px){
@@ -861,19 +863,19 @@
     }
     
     .socialFooterAbt {
-        margin-top:10px;
+        margin-top: 10px;
         text-align: center;
     }
     
     .socialAbt {
-        margin-right: 20px;
+        margin-right: px;
         font-size: 25px;
         color: #3b5998;
         width: 20px;
     }
     
     .social2Abt {
-        margin-left: 20px;
+        margin-left: 30px;
         font-size: 25px;
         color: #1da1f2;
         width: 20px;
