--- a/src/components/Pages/about.scss
+++ b/src/components/Pages/about.scss
@@ -769,7 +769,11 @@
     }
 } 
 
-@media (min-width: 300px) and (max-width: 320px){
+@media (min-width: 100px) and (max-width: 400px){
+    .desktopNavAbt {
+        opacity: 0;
+    }
+
     .aboutContainer {
         display: grid;
         grid-template-columns: 1fr 50px repeat(5, 1fr) 1fr;
@@ -782,30 +786,29 @@
     
     .contBorder {
         border: 3px solid #edeec9;
-        grid-column-start: 2;
-        grid-column-end: 8;
+        width: 80vw;
         grid-row-start: 2;
         grid-row-end: 7;
         background-color: #30332e; 
-        height: 1060px;
+        height: 1040px;
     }
     
     .aboutImage1 {
         height: 30vh;
-        width: 75vw;
-        margin-left: -20px;
-        margin-top: -25px;
+        width: 68vw;
+        margin-left: -30px;
+        margin-top: 25px;
         grid-column-start: 3;
         grid-row-start: 3;
     }
     
     .aboutImage2 {
         height: 30vh;
-        width: 75vw;
-        margin-left: -15px;
+        width: 68vw;
+        margin-left: -30px;
         grid-row-start: 5;
         grid-column-start: 3;
-        margin-top: 25px;
+        margin-top: 42px;
     }
     
     .aboutBryan {
@@ -818,10 +821,10 @@
         color: #edeec9;
         padding: 10px;
         font-size: 13px;
-        width: 230px;
-        margin-left: -20px;
-        height: 204px;
-        margin-top:-110px;
+        width: 217px;
+        margin-left: -30px;
+        height: 217px;
+        margin-top:-90px;
     }
     
     .aboutChefIan {
@@ -834,10 +837,10 @@
         color: #edeec9;
         padding: 10px;
         font-size: 13px;
-        width: 230px;
-        margin-top: -60px;
-        margin-left: -20px;
-        height: 224px;
+        width: 217px;
+        margin-top: -68px;
+        margin-left: -30px;
+        height: 236px;
     }
     
     #aboutButton {
@@ -851,7 +854,7 @@
     .footerAbt {
         background-color: #525962;
         height: 90px;
-        margin-left: -30px;
+        margin-left: -55px;
         width: 80vw;
     }
     
@@ -860,22 +863,28 @@
         color: white;
         font-family: 'Lexend Peta', sans-serif;
         margin-top: 20px;
+        margin-left: 16px;
     }
     
     .socialFooterAbt {
         margin-top: 10px;
         text-align: center;
+        margin-left: -20px;
+    }
+
+    .socialFooter {
+        margin-left: -20px;
     }
     
     .socialAbt {
-        margin-right: px;
+        margin-left: -20px;
+        margin-right: 30px;
         font-size: 25px;
         color: #3b5998;
         width: 20px;
     }
     
     .social2Abt {
-        margin-left: 30px;
         font-size: 25px;
         color: #1da1f2;
         width: 20px;
