--- a/src/components/Pages/about.scss
+++ b/src/components/Pages/about.scss
@@ -911,7 +911,7 @@
         grid-row-start: 2;
         grid-row-end: 7;
         background-color: #30332e; 
-        height: 1080px;
+        height: 1120px;
         margin-left: 22px;
     }
     
@@ -930,7 +930,7 @@
         margin-left: -3px;
         grid-row-start: 5;
         grid-column-start: 3;
-        margin-top: 75px;
+        margin-top: 90px;
     }
     
     .aboutBryan {
@@ -941,9 +941,9 @@
         color: #edeec9;
         padding: 10px;
         font-size: 15px;
-        width: 278px;
+        width: 67vw;
         margin-left: -3px;
-        height: 232px;
+        height: 35vh;
         margin-top:-90px;
     }
     
@@ -957,10 +957,10 @@
         color: #edeec9;
         padding: 10px;
         font-size: 15px;
-        width: 278px;
-        margin-top: -40px;
+        width: 67vw;
+        margin-top: -20px;
         margin-left: -2px;
-        height: 236px;
+        height: 35vh;
     }
     
     #aboutButton {
