--- a/src/components/Pages/about.scss
+++ b/src/components/Pages/about.scss
@@ -890,7 +890,7 @@
     }
 } 
 
-@media (min-width: 100px) and (max-width: 400px){
+@media (min-width: 300px) and (max-width: 400px){
     .desktopNavAbt {
         opacity: 0;
     }
@@ -1011,4 +1011,124 @@
     }
 } 
 
+@media (min-width: 300px) and (max-width: 330px){
+    .desktopNavAbt {
+        opacity: 0;
+    }
+
+    .aboutContainer {
+        display: grid;
+        grid-template-columns: 1fr 50px repeat(5, 1fr) 1fr;
+        grid-template-rows: 100px 50px 1fr 100px 1fr 50px 1fr;
+        background-color: #525962; 
+        padding-top: 10px;
+        height: 1400px;
+        width: 100vw;
+    }
+    
+    .contBorder {
+        border: 3px solid #edeec9;
+        width: 80vw;
+        grid-row-start: 2;
+        grid-row-end: 7;
+        background-color: #30332e; 
+        height: 1120px;
+        margin-left: 22px;
+    }
+    
+    .aboutImage1 {
+        height: 30vh;
+        width: 68vw;
+        margin-left: -5px;
+        margin-top: 25px;
+        grid-column-start: 3;
+        grid-row-start: 3;
+    }
+    
+    .aboutImage2 {
+        height: 30vh;
+        width: 68vw;
+        margin-left: -3px;
+        grid-row-start: 5;
+        grid-column-start: 3;
+        margin-top: 90px;
+    }
+    
+    .aboutBryan {
+        border: 3px solid #edeec9;
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 4;
+        color: #edeec9;
+        padding: 10px;
+        font-size: 14px;
+        width: 67vw;
+        margin-left: -3px;
+        height: 35vh;
+        margin-top:-90px;
+    }
+    
+    .aboutChefIan {
+        border: 3px solid #edeec9;
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 6;
+        margin-left: -120px;
+        margin-right: -80px;
+        color: #edeec9;
+        padding: 10px;
+        font-size: 14px;
+        width: 67vw;
+        margin-top: -20px;
+        margin-left: -2px;
+        height: 36.5vh;
+    }
+    
+    #aboutButton {
+        grid-column-start: 4;
+        grid-column-end: 9;
+        margin-left: -50px;
+        margin-top: 10px;
+        display: none;
+    }
+
+    .footerAbt {
+        background-color: #525962;
+        height: 90px;
+        margin-left: -42px;
+        width: 87vw;
+    }
+    
+    .footerMessageAbt {
+        text-align: center;
+        color: white;
+        font-family: 'Lexend Peta', sans-serif;
+        margin-top: 20px;
+        margin-left: 16px;
+    }
+    
+    .socialFooterAbt {
+        margin-top: 10px;
+        text-align: center;
+        margin-left: -20px;
+    }
+
+    .socialFooter {
+        margin-left: -20px;
+    }
+    
+    .socialAbt {
+        margin-left: -20px;
+        margin-right: 30px;
+        font-size: 25px;
+        color: #3b5998;
+        width: 20px;
+    }
+    
+    .social2Abt {
+        font-size: 25px;
+        color: #1da1f2;
+        width: 20px;
+    }
+} 
     
