--- a/src/components/Pages/about.scss
+++ b/src/components/Pages/about.scss
@@ -39,7 +39,7 @@
 }
 
 .aboutBryan {
-    border: 3px solid #edeec9;
+    // border: 3px solid #edeec9;
     grid-column-start: 5;
     grid-column-end: 7;
     grid-row-start: 3;
@@ -52,7 +52,7 @@
 }
 
 .aboutChefIan {
-    border: 3px solid #edeec9;
+    // border: 3px solid #edeec9;
     grid-column-start: 5;
     grid-column-end: 7;
     grid-row-start: 5;
@@ -112,7 +112,6 @@
     }
 
     .contBorder {
-        border: 3px solid #edeec9;
         grid-column-start: 2;
         grid-column-end: 8;
         grid-row-start: 2;
@@ -137,7 +136,6 @@
     }
     
     .aboutBryan {
-        border: 3px solid #edeec9;
         grid-column-start: 5;
         grid-column-end: 7;
         grid-row-start: 3;
@@ -150,7 +148,6 @@
     }
     
     .aboutChefIan {
-        border: 3px solid #edeec9;
         grid-column-start: 5;
         grid-column-end: 7;
         grid-row-start: 5;
@@ -247,7 +244,6 @@
     }
     
     .aboutBryan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 4;
@@ -261,7 +257,6 @@
     }
     
     .aboutChefIan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 6;
@@ -368,7 +363,6 @@
     }
     
     .aboutBryan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 4;
@@ -382,7 +376,6 @@
     }
     
     .aboutChefIan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 6;
@@ -490,7 +483,6 @@
     }
     
     .aboutBryan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 4;
@@ -504,7 +496,6 @@
     }
     
     .aboutChefIan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 6;
@@ -611,7 +602,6 @@
     }
     
     .aboutBryan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 4;
@@ -625,7 +615,6 @@
     }
     
     .aboutChefIan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 6;
@@ -734,7 +723,6 @@
     }
     
     .aboutBryan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 4;
@@ -748,7 +736,6 @@
     }
     
     .aboutChefIan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 6;
@@ -855,7 +842,6 @@
     }
     
     .aboutBryan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 4;
@@ -869,7 +855,6 @@
     }
     
     .aboutChefIan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 6;
@@ -977,7 +962,6 @@
     }
     
     .aboutBryan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 4;
@@ -991,7 +975,6 @@
     }
     
     .aboutChefIan {
-        border: 3px solid #edeec9;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 6;
