--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -17,8 +17,8 @@ display: block;
 margin-left: auto;
 margin-right: auto;
 margin-top: -500px;
-// -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-// animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+ -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+ animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
 .heading5280 {
@@ -26,16 +26,16 @@ color: white;
 font-family: 'Hepta Slab', serif;
 text-align: center;
 margin-top: 40px;
-// -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-// animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+ -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+ animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
 .quote5280 {
 color: white;
 text-align:center;
 font-size: 20px;
-// -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-// animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+ -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+ animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
 .headingYelp {
@@ -43,16 +43,16 @@ color: white;
 font-family: 'Hepta Slab', serif;
 text-align: center;
 margin-top: 40px;
-// -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-// animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+ -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+ animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
 .quoteYelp{
 color: white;
 text-align:center;
 font-size: 20px;
-// -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-// animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+ -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+ animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
 
@@ -64,8 +64,8 @@ font-size: 20px;
   font-size: 45px;
   font-family: 'Lexend Peta', sans-serif;
   color: white;
-  // -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-  //       animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+         animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
 .mobileContainer {
@@ -74,30 +74,30 @@ font-size: 20px;
   height: 60px;
 }
 
-// @-webkit-keyframes heroHeading {
-//   0% {
-//     -webkit-filter: blur(12px);
-//             filter: blur(12px);
-//     opacity: 0;
-//   }
-//   100% {
-//     -webkit-filter: blur(0px);
-//             filter: blur(0px);
-//     opacity: 1;
-//   }
-// }
-// @keyframes text-focus-in {
-//   0% {
-//     -webkit-filter: blur(12px);
-//             filter: blur(12px);
-//     opacity: 0;
-//   }
-//   100% {
-//     -webkit-filter: blur(0px);
-//             filter: blur(0px);
-//     opacity: 1;
-//   }
-// }
+ @-webkit-keyframes heroHeading {
+   0% {
+     -webkit-filter: blur(12px);
+             filter: blur(12px);
+     opacity: 0;
+   }
+   100% {
+     -webkit-filter: blur(0px);
+             filter: blur(0px);
+     opacity: 1;
+   }
+ }
+ @keyframes text-focus-in {
+   0% {
+     -webkit-filter: blur(12px);
+             filter: blur(12px);
+     opacity: 0;
+   }
+   100% {
+     -webkit-filter: blur(0px);
+             filter: blur(0px);
+     opacity: 1;
+   }
+ }
 
 
 // Start button styles  
