--- a/src/components/Mobilenav/Mobilenav.scss
+++ b/src/components/Mobilenav/Mobilenav.scss
@@ -10,12 +10,12 @@ li {
   padding: 0.75rem 2rem;
   background: var(--offWhite);
   z-index: 1;
-  background-color: black;
+  background-color: #30332e;
 }
 
 .nav-icon {
   color: white;
-  background-color: black;
+  background-color: #30332e;
   font-size: 2rem;
   margin-top:-5px;
   margin-bottom: -5px;
@@ -353,7 +353,7 @@ li {
     padding: 0.75rem 2rem;
     background: var(--offWhite);
     z-index: 1;
-    background-color: black;
+    background-color: #30332e;
   }
   
   .nav-icon {
