--- a/src/components/Mobilenav/Mobilenav.scss
+++ b/src/components/Mobilenav/Mobilenav.scss
@@ -52,12 +52,12 @@ li {
     padding: 0.75rem 2rem;
     background: var(--offWhite);
     z-index: 1;
-    background-color: black;
+    background-color: #30332e;
   }
   
   .nav-icon {
     color: white;
-    background-color: black;
+    background-color: #30332e;
     font-size: 2rem;
     margin-top:-5px;
     margin-bottom: -5px;
@@ -95,12 +95,12 @@ li {
     padding: 0.75rem 2rem;
     background: var(--offWhite);
     z-index: 1;
-    background-color: black;
+    background-color: #30332e;
   }
   
   .nav-icon {
     color: white;
-    background-color: black;
+    background-color: #30332e;
     font-size: 2rem;
     margin-top:-5px;
     margin-bottom: -5px;
@@ -138,12 +138,12 @@ li {
     padding: 0.75rem 2rem;
     background: var(--offWhite);
     z-index: 1;
-    background-color: black;
+    background-color: #30332e;
   }
   
   .nav-icon {
     color: white;
-    background-color: black;
+    background-color: #30332e;
     font-size: 2rem;
     margin-top:-5px;
     margin-bottom: -5px;
@@ -181,12 +181,12 @@ li {
     padding: 0.75rem 2rem;
     background: var(--offWhite);
     z-index: 1;
-    background-color: black;
+    background-color: #30332e;
   }
   
   .nav-icon {
     color: white;
-    background-color: black;
+    background-color: #30332e;
     font-size: 2rem;
     margin-top:-5px;
     margin-bottom: -5px;
@@ -224,12 +224,12 @@ li {
     padding: 0.75rem 2rem;
     background: var(--offWhite);
     z-index: 1;
-    background-color: black;
+    background-color: #30332e;
   }
   
   .nav-icon {
     color: white;
-    background-color: black;
+    background-color: #30332e;
     font-size: 2rem;
     margin-top:-5px;
     margin-bottom: -5px;
@@ -267,12 +267,12 @@ li {
     padding: 0.75rem 2rem;
     background: var(--offWhite);
     z-index: 1;
-    background-color: black;
+    background-color: #30332e;
   }
   
   .nav-icon {
     color: white;
-    background-color: black;
+    background-color: #30332e;
     font-size: 2rem;
     margin-top:-5px;
     margin-bottom: -5px;
@@ -310,12 +310,12 @@ li {
     padding: 0.75rem 2rem;
     background: var(--offWhite);
     z-index: 1;
-    background-color: black;
+    background-color: #30332e;
   }
   
   .nav-icon {
     color: white;
-    background-color: black;
+    background-color: #30332e;
     font-size: 2rem;
     margin-top:-5px;
     margin-bottom: -5px;
@@ -358,7 +358,7 @@ li {
   
   .nav-icon {
     color: white;
-    background-color: black;
+    background-color: #30332e;
     font-size: 2rem;
     margin-top:-5px;
     margin-bottom: -5px;
@@ -396,12 +396,12 @@ li {
     padding: 0.75rem 2rem;
     background: var(--offWhite);
     z-index: 1;
-    background-color: black;
+    background-color: #30332e;
   }
   
   .nav-icon {
     color: white;
-    background-color: black;
+    background-color: #30332e;
     font-size: 2rem;
     margin-top:-5px;
     margin-bottom: -5px;
