--- a/src/components/Mobilenav/Mobilenav.scss
+++ b/src/components/Mobilenav/Mobilenav.scss
@@ -33,6 +33,7 @@ li {
   height:0;
   overflow: hidden;
   text-align: center;
+  transition: all 0.3s linear;
 }
 
 .show-nav {
@@ -75,6 +76,7 @@ li {
     height:0;
     overflow: hidden;
     text-align: center;
+    transition: all 0.3s linear;
   }
   
   .show-nav {
@@ -118,6 +120,7 @@ li {
     height:0;
     overflow: hidden;
     text-align: center;
+    transition: all 0.3s linear;
   }
   
   .show-nav {
@@ -161,6 +164,7 @@ li {
     height:0;
     overflow: hidden;
     text-align: center;
+    transition: all 0.3s linear;
   }
   
   .show-nav {
@@ -204,6 +208,7 @@ li {
     height:0;
     overflow: hidden;
     text-align: center;
+    transition: all 0.3s linear;
   }
   
   .show-nav {
@@ -247,6 +252,7 @@ li {
     height:0;
     overflow: hidden;
     text-align: center;
+    transition: all 0.3s linear;
   }
   
   .show-nav {
@@ -290,6 +296,7 @@ li {
     height:0;
     overflow: hidden;
     text-align: center;
+    transition: all 0.3s linear;
   }
   
   .show-nav {
@@ -333,6 +340,7 @@ li {
     height:0;
     overflow: hidden;
     text-align: center;
+    transition: all 0.3s linear;
   }
   
   .show-nav {
@@ -376,6 +384,7 @@ li {
     height:0;
     overflow: hidden;
     text-align: center;
+    transition: all 0.3s linear;
   }
   
   .show-nav {
@@ -419,6 +428,7 @@ li {
     height:0;
     overflow: hidden;
     text-align: center;
+    transition: all 0.3s linear;
   }
   
   .show-nav {
