--- a/src/components/Mobilenav/Mobilenav.scss
+++ b/src/components/Mobilenav/Mobilenav.scss
@@ -16,7 +16,7 @@ li {
 .nav-icon {
   color: white;
   background-color: #30332e;
-  font-size: 2rem;
+  font-size: 2.5rem;
   margin-top:-5px;
   margin-bottom: -5px;
   margin-left: -2px;
@@ -25,6 +25,7 @@ li {
 }
 
 .mobile-image {
+  margin-top: 10px;
   margin-right: 85.5vw;
   height: 40px;
 }
@@ -428,7 +429,7 @@ li {
     height:0;
     overflow: hidden;
     text-align: center;
-    transition: all 0.3s linear;
+    
   }
   
   .show-nav {
