--- a/src/components/Mobilenav/Mobilenav.scss
+++ b/src/components/Mobilenav/Mobilenav.scss
@@ -71,6 +71,7 @@ li {
   .mobile-image {
     margin-right: 82.5vw;
     height: 40px;
+    margin-top: 10px;
   }
   
   .nav-links {
@@ -115,6 +116,7 @@ li {
   .mobile-image {
     margin-right: 81.5vw;
     height: 40px;
+    margin-top: 10px;
   }
   
   .nav-links {
@@ -159,6 +161,7 @@ li {
   .mobile-image {
     margin-right: 78.5vw;
     height: 40px;
+    margin-top: 10px;
   }
   
   .nav-links {
@@ -203,6 +206,7 @@ li {
   .mobile-image {
     margin-right: 75.5vw;
     height: 40px;
+    margin-top: 10px;
   }
   
   .nav-links {
@@ -247,6 +251,7 @@ li {
   .mobile-image {
     margin-right: 72.5vw;
     height: 40px;
+    margin-top: 10px;
   }
   
   .nav-links {
@@ -291,6 +296,7 @@ li {
   .mobile-image {
     margin-right: 69.5vw;
     height: 40px;
+    margin-top: 10px;
   }
   
   .nav-links {
@@ -335,6 +341,7 @@ li {
   .mobile-image {
     margin-right: 65.5vw;
     height: 40px;
+    margin-top: 10px;
   }
   
   .nav-links {
@@ -379,6 +386,7 @@ li {
   .mobile-image {
     margin-right: 60.5vw;
     height: 40px;
+    margin-top: 10px;
   }
   
   .nav-links {
@@ -421,8 +429,9 @@ li {
   }
   
   .mobile-image {
-    margin-right: 47.5vw;
+    margin-right: 54.5vw;
     height: 40px;
+    margin-top: 10px;
   }
   
   .nav-links {
